[gd_scene load_steps=12 format=3 uid="uid://c6lh168xkbvro"]

[ext_resource type="Script" uid="uid://dpuvo2drfp36y" path="res://scenes/minigame/listening/listening_game.gd" id="1_fyy76"]
[ext_resource type="AudioStream" uid="uid://byqw0xlh82vyb" path="res://sounds/crickets.ogg" id="2_0pewj"]
[ext_resource type="Texture2D" uid="uid://v3l85ny2ehjt" path="res://sprites/photos/spr_woods2.png" id="2_oa4xw"]
[ext_resource type="AudioStream" uid="uid://c0hf04scohk27" path="res://music/mus_bmsloop.ogg" id="3_3uwvn"]
[ext_resource type="Texture2D" uid="uid://da2os5pe7n7xn" path="res://sprites/gui/spr_gui.png" id="3_f5dc4"]

[sub_resource type="Curve" id="Curve_3uwvn"]
_limits = [-80.0, 8.0, -1.0, 1.0]
_data = [Vector2(-0.224517, -80), 0.0, 0.0, 0, 0, Vector2(0.129097, -18.1841), 5.78619, 5.78619, 0, 0, Vector2(0.78581, -6.17306), 0.0, 0.0, 0, 0, Vector2(0.903682, 8), 70.0988, 0.0, 0, 0]
point_count = 4

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3uwvn"]
noise_type = 0
fractal_type = 0

[sub_resource type="AtlasTexture" id="AtlasTexture_4ksuf"]
atlas = ExtResource("2_oa4xw")
region = Rect2(313, 464, 277.385, 160)
filter_clip = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fyy76"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_oa4xw"]
interpolation_mode = 1
colors = PackedColorArray(1, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4ksuf"]
gradient = SubResource("Gradient_oa4xw")
width = 12
height = 12
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="ListeningGame" type="Node2D"]
script = ExtResource("1_fyy76")
volume_curve = SubResource("Curve_3uwvn")
default_signal_noise = SubResource("FastNoiseLite_3uwvn")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 5.0
offset_right = 158.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="TextureRect" parent="PanelContainer"]
modulate = Color(0, 0.315563, 0.372426, 1)
layout_mode = 2
texture = SubResource("AtlasTexture_4ksuf")
expand_mode = 2
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="DrawPanel" type="Panel" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fyy76")
metadata/_edit_use_anchors_ = true

[node name="ProgressBarContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0pewj")
volume_db = 8.0
pitch_scale = 2.15
bus = &"Radio Music"

[node name="Signal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3uwvn")
volume_db = 4.0
pitch_scale = 1.4
bus = &"Radio Music"

[node name="Pointer" type="Sprite2D" parent="."]
position = Vector2(84, 9)
texture = ExtResource("3_f5dc4")
flip_v = true
region_enabled = true
region_rect = Rect2(4, 12, 8, 16)

[node name="RecordIndicator" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(12, 73)
texture = SubResource("GradientTexture2D_4ksuf")
